// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaRugbyMatchStats should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa giUBsz"
  >
    <div
      class="sc-htpNat sc-bxivhb haYBet"
    />
    <div
      class="sc-bwzfXH kVYHKf"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaRugbyMatchStats should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa hGXeaj"
  >
    <div
      class="sc-htpNat sc-bxivhb haYBet"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
